5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1582_1332.log
== SUBMITION (2019-03-21 16:01:15) 
-- CODE:
aresta = 5
area = 3* 3**(1/2 * 5**2 /@)
 
print(round(area, 4))
-- EXECUTION TIME:
0.131407
-- ERROR:
  File "/home/codebench/codes/1582/1332/main.py", line 2
    area = 3* 3**(1/2 * 5**2 /@)
                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:01:25) 
-- CODE:
aresta = 5
area = 3* 3**(1/2 * 5**2 /2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.152733
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2878.2539
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 16:01:47) 
-- CODE:
aresta = 5
area = 3* 3**(1/2) * 5**2 /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.263029
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 08:55:43) 
-- CODE:
aresta = 5
area = (3* 3**(1/2) * 5**2) /2
 
print(round(area, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 08:56:03) 
-- CODE:
aresta = 5
area = (3* 3**(1/2) * 5**2) /2
 
print(round(area, 4))
-- EXECUTION TIME:
0.146062
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
